# distilled-cola

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  _run_transcribe.py  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.json  settings.local.json
.mimocode/plans/: 1781329656727-lucky-planet.md
.speckit/: CONSTITUTION.md  PLAN.md  SPEC.md  state.json
.speckit/quality/: constitution-quality.json
.speckit/tasks/: T-001.md  T-002.md  T-003.md  T-004.md  T-005.md  T-006.md  T-007.md  T-008.md  T-009.md  T-010.md  T-011.md  T-012.md  T-013.md  T-014.md  T-015.md  T-016.md  T-017.md  T-018.md  T-019.md  T-020.md  T-021.md  T-022.md  T-023.md  T-024.md  T-025.md  T-026.md  T-027.md  T-028.md  T-029.md  T-030.md  T-031.md  T-032.md  (+39 more)
data/: feedback.jsonl
distilled_cola.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
notebooks/: analysis.ipynb
scripts/: annotate_only.py  batch_ocr_video.py  batch_transcribe.py  batch_transcribe_mlx.py  clean_ocr.py  embed_and_ingest.py  ingest_all.py  ingest_knowledge.py  ingest_transcriptions.py  ingest_transcriptions_fast.py  inject_family_knowledge.py  inject_firsthome_knowledge.py  inject_herhome_knowledge.py  migrate_reasoning_metadata.py  migrate_reasoning_metadata_v2.py  ocr_tool  ocr_tool.swift  process_videos.py  rebuild_reasoning_index.py
src/: config.py  llm.py
tests/: test_hybrid_retriever.py  test_ocr.py  test_pipeline.py  test_processor.py  test_segmenter.py
(+345 files in other folders)
